--- a/src/App.css
+++ b/src/App.css
@@ -38,7 +38,118 @@
 }
 
 .container{
-  width: 50%;
   margin: auto;
-  background-color: rgb(244, 84, 84) ;
+  text-align: center;
+}
+
+/*======== navbar ========*/
+
+a{
+  text-decoration: none;
+}
+
+li{
+  list-style: none;
+}
+
+.menu {
+  padding:0;
+  margin:0;
+  list-style-type: none;/* 点なし */
+  margin-bottom: 10%;
+}
+
+.menu li {
+  width:20%;
+  display: inline-block;
+  padding:5px;
+  margin:0;
+  text-align:center; /* 字は中央に */
+}
+.menu li a {
+  width:auto;
+  color:#fff;/* 字の色 */
+  font-size:24px;/* 字の大きさ */
+  font-weight:bold;/* 字の太さ */
+  text-decoration:none;/* アンダーラインなし */
+  display:block;/* 横並び */
+  background:rgb(181, 17, 17); /* ピンク */
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+
+}
+
+.menu li a:hover {
+  background:#555;
+}
+
+
+/*======== ali css ========*/
+
+.App {
+  text-align: center;
+}
+
+.App-logo {
+  animation: App-logo-spin infinite 20s linear;
+  height: 80px;
+}
+
+.App-header {
+  background-color: steelblue;
+  height: 70px;
+  padding: 20px;
+  color: white;
+}
+
+.App-intro {
+  font-size: large;
+}
+
+/* new css for job component */
+* {
+  box-sizing: border-box;
+}
+
+.jobs {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.App-header h2 {
+  margin: 0;
+}
+
+.add-jobs {
+  text-align: center;
+}
+
+.add-jobs button {
+  font-size: 16px;
+  padding: 8px;
+  margin: 0 10px 30px 10px;
+}
+
+.job {
+  padding: 5px 25px 10px 25px;
+  max-width: 25%;
+}
+
+/* job form styles */
+
+.job-form {
+  width: 250px;
+  margin: 0 auto;
+}
+
+.job-form input, .job-form textarea {
+  width: 250px;
+  font-size:14px;
+  padding: 5px;
+  margin: 5px;
+}
+
+.job-form button {
+  font-size: 16px;
+  padding: 4px;
+  margin: 10px 10px 30px 10px;
 }
