--- a/src/App.css
+++ b/src/App.css
@@ -143,8 +143,14 @@ li{
 /* job form styles */
 
 .job-form {
-  width: 250px;
+  width: 400px;
+  background: #FAFAFA;
   margin: 0 auto;
+  padding: 30px;
+  margin: 50px auto;
+  box-shadow: 1px 1px 25px rgba(0, 0, 0, 0.35);
+  border-radius: 10px;
+  border: 6px solid #305A72;
 }
 
 .job-form input, .job-form textarea {
@@ -152,6 +158,7 @@ li{
   font-size:14px;
   padding: 5px;
   margin: 5px;
+  border: 1px solid #B0CFE0;
 }
 
 .job-form button {
