--- a/src/App.css
+++ b/src/App.css
@@ -7,11 +7,8 @@
   height: 80px;
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+.top-nav {
+  background-color: #fff;
 }
 
 .App-title {
@@ -25,4 +22,9 @@
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
+}
+
+.post-job-form{
+  max-width: 600px;
+  margin: 0 auto;
 }
