--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -149,3 +149,10 @@ button:hover {
     margin-right: auto;
   }
 }
+.justify {
+  color: #800000;
+  font-style: normal;
+  font-weight: bold;
+   
+
+}
