--- a/src/App.css
+++ b/src/App.css
@@ -1,37 +1,3 @@
-
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
-/*.top-nav {
-  background: #fff;
-  padding: 24px;
-  min-height: 280px;
-  margin: 16px 24px 16px 0;
-}*/
-
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
 .post-job-form {
   max-width: 600px;
   margin: 0 auto;
@@ -53,15 +19,68 @@
   overflow: scroll;
 }
 
-
-.MITlogo {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 10%;
-
+#header {
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+  background: #00142a;
+  position: relative;
+  z-index: 10;
+  max-width: 100%;
 }
-.justify {
-  color: red;
+#header.home-nav-bottom {
+  background: rgba(255, 255, 255, 0.9);
+  border-bottom-color: #ebedee;
+}
+#header.home-nav-bottom .search {
+  border-left-color: #ebedee;
+}
+#header.home-nav-bottom a {
+  color: #314659;
+}
+#header .header-link {
+  color: #314659;
+}
+#header .ant-menu-item-active .header-link {
+  color: #1890ff;
+}
+#logo {
+  overflow: hidden;
+  padding-left: 40px;
+  float: left;
+  height: 64px;
+  line-height: 64px;
+  text-decoration: none;
+  white-space: nowrap;
+}
+#logo img {
+  height: 32px;
+  margin-right: 16px;
+}
+#logo img + img {
+  height: 16px;
+  position: relative;
+  top: 1px;
+}
 
+#nav {
+  border: 0;
+  float: right;
+  font-size: 14px;
+  font-family: Lato, "Monospace Number", "Chinese Quote", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+#nav.ant-menu-horizontal {
+  border-bottom: none;
+}
+#nav.ant-menu-horizontal > .ant-menu-item {
+  min-width: 72px;
+  padding: 5px;
+  background-color: transparent;
+}
+
+#nav > .ant-menu-item {
+  text-align: center;
+}
+
+.content-wrapper{
+  padding-top: 50px;
 }
